--- a/sitemap.html
+++ b/sitemap.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Main</title>
-    <link rel="icon" type="image/x-icon" href="favicon.png">
+    <link rel="icon" type="image/x-icon" href="/img/favicon.png">
     <link rel="stylesheet" href="css/lib/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
     <link rel="stylesheet" href="css/style.css">
@@ -22,7 +22,8 @@
             <li><a href="campaigns.html" target="_blank">Campaigns page</a></li>
             <li><a href="campaigns-single.html" target="_blank">Campaigns page single</a></li>
             <li><a href="products-services.html" target="_blank">Products and Services page</a></li>
-            <li><a href="about-us.html" target="_blank">About Us/Vacancies page </a></li>
+            <li><a href="about-us.html" target="_blank">About Us page</a></li>
+            <li><a href="contact.html" target="_blank">Contact page</a></li>
         </ul>
     </div>
 
